TestSuite/errors/err0450.pas
//!Нельзя присвоить левой части
begin
  (^integer) := 2;
end.